added hreaf to buttons

--- a/освобождение/about.html
+++ b/освобождение/about.html
@@ -94,7 +94,7 @@
                         <label for="agreement10">Lorem sit amet conetur adiping. </label>
                     </div>
                 </ul>
-                <button class="button-72" role="button" class="more" href="#">More</button>
+                <a href=" #"><button class="button-72" role="button" class="more">More</button></a>
 
             </div>
             <div class="col_w300 float_r">
@@ -113,7 +113,7 @@
                     <div class="fp_news_date">January 24, 2023</div>
                     <div class="local"></div>
                 </div>
-                <button class="button-72" role="button" class="more" href="#">More</button>
+                <a href=" #"><button class="button-72" role="button" class="more">More</button></a>
 
                 <br><br>
                 <h3>Testimonials</h3>
