--- a/освобождение/index.html
+++ b/освобождение/index.html
@@ -38,7 +38,7 @@
                 nesciunt quisquam,
                 sapiente sunt? Architecto fugit illo impedit omnis, quaerat quidem repellendus voluptatibus!
             </p>
-            <button class="button-29" role="button">Learn more</button>
+            <a href="#"><button class="button-29" role="button" href="#">Learn more</button></a>
 
         </div>
         <div class="fp_services">
@@ -46,17 +46,17 @@
                 <div class="fps_title"><a href="#" class="">Web Design</a></div>
                 <p class="inside_box">Etiam magna metus, hendrerit non aliquam nec, tincidunt nec metus.</p>
 
-                <button class="button-72" role="button" class="more" href="#">More</button>
+                <a href=" #"><button class="button-72" role="button" class="more">More</button></a>
             </div>
             <div class="fp_services_box">
                 <div class="fps_title"><a href="#">CSS Templates</a></div>
                 <p class="inside_box">Etiam magna metus, hendrerit non aliquam nec, tincidunt nec metus.</p>
-                <button class="button-72" role="button" class="more" href="#">More</button>
+                <a href=" #"><button class="button-72" role="button" class="more">More</button></a>
             </div>
             <div class="fp_services_box l_box">
                 <div class="fps_title"><a href="#">Interactive Media</a></div>
                 <p class="inside_box">Etiam magna metus, hendrerit non aliquam nec, tincidunt nec metus.</p>
-                <button class="button-72" role="button" class="more" href="#">More</button>
+                <a href=" #"><button class="button-72" role="button" class="more">More</button></a>
             </div>
         </div>
         <div class="main">
@@ -122,7 +122,7 @@
                         <label for="agreement10">Lorem sit amet conetur adiping. </label>
                     </div>
                 </ul>
-                <button class="button-72" role="button" class="more" href="#">More</button>
+                <a href=" #"><button class="button-72" role="button" class="more">More</button></a>
             </div>
             <div class="col_w300 float_l">
                 <h2> Latest Updates</h2>
@@ -147,7 +147,7 @@
                 </div>
 
 
-                <button class="button-30" role="button">View All</button>
+                <button class="button-30" role="button" href="#">View All</button>
                 <br><br>
             </div>
         </div>
