--- a/освобождение/latestNews.html
+++ b/освобождение/latestNews.html
@@ -45,7 +45,7 @@
                         <a href="" rel="nofollow"><strong>XHTML</strong></a> &amp; <a href=""
                             rel="nofollow"><strong>CSS</strong></a>.
                     </p>
-                    <button class="button-72" role="button" class="more" href="#">More</button>
+                    <a href=" #"><button class="button-72" role="button" class="more">More</button></a>
 
                     <div class="local"></div>
                 </div>
@@ -58,9 +58,8 @@
                     <a href="#"><img width="600" src="/images/new-year.jpg" alt="Image" /></a>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia possimus sequi odit, esse corporis
                         magni expedita! Nostrum eum eos maxime! Vitae, consequatur laboriosam.</p>
-                    <button class="button-72" role="button" class="more" href="#">More</button>
+                    <a href=" #"><button class="button-72" role="button" class="more">More</button></a>
 
-                    <div class="local"></div>
                 </div>
             </div>
             <div class="col_w300 float_r">
@@ -101,7 +100,7 @@
                     <div class="fp_news_date">June 24, 2023</div>
                     <div class="local"></div>
                 </div>
-                <button class="button-72" role="button" class="more" href="#">More</button>
+                <a href=" #"><button class="button-72" role="button" class="more">More</button></a>
                 <br><br>
                 <h3>Testimonials</h3>
                 <blockquote>
