fixed buttons href

--- a/освобождение/index.html
+++ b/освобождение/index.html
@@ -38,7 +38,7 @@
                 nesciunt quisquam,
                 sapiente sunt? Architecto fugit illo impedit omnis, quaerat quidem repellendus voluptatibus!
             </p>
-            <a href="#"><button class="button-29" role="button" href="#">Learn more</button></a>
+            <a href="#"><button class="button-29" role="button">Learn more</button></a>
 
         </div>
         <div class="fp_services">
@@ -147,7 +147,7 @@
                 </div>
 
 
-                <button class="button-30" role="button" href="#">View All</button>
+                <a href="#"><button class="button-30" role="button">View All</button></a>
                 <br><br>
             </div>
         </div>
